--- a/common/css/style.css
+++ b/common/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Noto+Serif+KR:wght@200;300;400;500;600;700;900&display=swap");
 .wedding-card__wrapper {
   background-color: #f1f1f1;
@@ -654,13 +655,24 @@ footer .copyright span {
   height: 100%;
   vertical-align: middle;
 }
+.mfp-container::after {
+  position: absolute;
+  top: 16px;
+  left: 8px;
+  content: "사진 손으로 톡 톡 치시면 다음 장으로 넘어갑니다 :) ";
+  color: #fff;
+  font-size: 9px;
+  font-family: "Noto Serif KR", serif;
+  z-index: 5;
+  opacity: 0.6;
+}
 .mfp-container-close {
   position: absolute;
   top: 10px;
   right: 10px;
-  width: 44px;
-  height: 44px;
-  line-height: 44px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
   text-decoration: none;
   text-align: center;
   opacity: 0.65;
@@ -702,9 +714,9 @@ footer .copyright span {
   position: absolute;
   top: 10px;
   right: 10px;
-  width: 44px;
-  height: 44px;
-  line-height: 44px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
   text-decoration: none;
   text-align: center;
   opacity: 0.65;
@@ -744,7 +756,6 @@ footer .copyright span {
   display: block;
   line-height: 0;
   box-sizing: border-box;
-  padding: 40px 0;
   margin: 0 auto;
 }
 .mfp-figure {
@@ -776,6 +787,7 @@ footer .copyright span {
 }
 .mfp-figure .mfp-close {
   background-image: initial;
+  display: none;
 }
 .mfp-bottom-bar {
   margin-top: -36px;
