--- a/common/css/style.scss
+++ b/common/css/style.scss
@@ -893,8 +893,8 @@ footer{
   &-hide { display: none !important; }
 
   &-close {
-	position: absolute;
-	top: 10px;
+    position: absolute;
+    top: 10px;
     right: 10px;
 		width: 30px;
 		height: 30px;
@@ -909,10 +909,10 @@ footer{
     font-style: normal;
     font-size: 0;
 
-	background-image: url("../image/btn_close_mg_popup.png");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: contain;
+    background-image: url("../image/btn_close_mg_popup.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 
     &:hover,
     &:focus {
@@ -1000,12 +1000,12 @@ footer{
 
   &-counter {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 15px;
+    right: 4px;
     color: #f3f3f3;
     font-size: 12px;
     line-height: 18px;
-	font-family: 'Gowun Batang', serif;
+    font-family: 'Gowun Batang', serif;
     white-space: nowrap;
   }
 
